# opencv_training

./: CMakeLists.txt  class_modifier.cpp  main.cpp  oop_main.h
